Removed pb-2 from each featured project gif. Added max-width 100% to both img and gif, will refactor CSS later on. Both made display: block to fix gap issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -135,6 +135,12 @@ nav a:hover {
   transition: filter 0.5s ease-in-out;
 }
 
+.projectGif,
+.projectImg {
+  max-width: 100%;
+  display: block; 
+}
+
 .displayCard:hover {
   background-color: var(--primDark);
   transform: translate(0px, -10px);
